kubeyml/micro_frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: micro
  labels:
    app: frontend
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
        - name: micro-frontend
          image: micro/frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
            # - name: frontend-src
            #   mountPath: /app
          livenessProbe:
            httpGet:
              path: /healthz/liveness
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          # resources: {}
          # terminationMessagePath: /dev/termination-log
          # terminationMessagePolicy: File
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
        # - name: frontend-src
        #   persistentVolumeClaim:
        #     claimName: micro-frontend-pvc
      # securityContext: {}
      # terminationGracePeriodSeconds: 30
