kubeyml/micro_transferapp_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transferapp
  namespace: micro
  labels:
    app: transferapp
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transferapp
  template:
    metadata:
      labels:
        app: transferapp
    spec:
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
        - name: micro-transferapp
          image: micro/transferservice:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
              readOnly: true
            # - name: transferapp-src
            #   mountPath: /app
          livenessProbe:
            httpGet:
              path: /healthz/liveness
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz/readiness
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
          # resources: {}
          # terminationMessagePath: /dev/termination-log
          # terminationMessagePolicy: File
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei
        # - name: transferapp-src
        #   persistentVolumeClaim:
        #     claimName: micro-transferapp-pvc
      # securityContext: {}
      # terminationGracePeriodSeconds: 30
