kubeyml/micro_frontend_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: micro
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30500
  selector:
    app: frontend
