kubeyml/micro_transferapp_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: transferapp
  namespace: micro
  labels:
    app: transferapp
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30700
  selector:
    app: transferapp
