kubeyml/micro_transferdb_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: transferdb
  namespace: micro
  labels:
    app: transferdb
spec:
  type: NodePort
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 30432
  selector:
    app: transferdb
