kubeyml/micro_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"     
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   more_set_headers "server: hide";
    #   more_set_headers "X-Content-Type-Options: nosniff";
    #   more_set_headers "X-Frame-Options: DENY";
    #   more_set_headers "X-Xss-Protection: 1";    
  
spec:
  # tls:
  #   - hosts:
  #       - example.com
  #     secretName: tls-secret
  rules:
  - host: microapps.url.shortener
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 5000
        - path: /v1/api/transfer
          pathType: Prefix
          backend:
            service:
              name: transferapp
              port:
                number: 5000
        - path: /([a-zA-Z0-9]{6,7})$
          pathType: Prefix
          backend:
            service:
              name: transferapp
              port:
                number: 5000
